tests/ui/borrowck/reassignment_immutable_fields.stderr
error[E0381]: partially assigned binding `x` isn't fully initialized
  --> $DIR/reassignment_immutable_fields.rs:7:5
   |
LL |     let x: (u32, u32);
   |         - binding declared here but left uninitialized
LL |     x.0 = 1;
   |     ^^^^^^^ `x` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0381]: partially assigned binding `x` isn't fully initialized
  --> $DIR/reassignment_immutable_fields.rs:15:5
   |
LL |     let x: (u32, u32);
   |         - binding declared here but left uninitialized
LL |     x.0 = 1;
   |     ^^^^^^^ `x` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0381`.
